@@ -501,32 +501,34 @@
                                   md-mode="indeterminate"
                                   md-diameter="32"><!-- progress --></md-progress-circular>
           </div>
-          <md-fab-speed-dial
-              class="md-scale md-fab-bottom-right"
-              ng-cloak="ng-cloak"
-              md-direction="up"
-              ng-show="addressbook.selectedFolder.isOwned || addressbook.selectedFolder.acls.objectCreator">
-            <md-fab-trigger>
-              <md-button class="md-fab md-accent" label:aria-label="New Contact">
-                <md-icon>add</md-icon>
-              </md-button>
-            </md-fab-trigger>
-            <md-fab-actions>
-              <md-button var:aria-label="Contact" class="md-fab md-raised md-mini"
-                         ng-click="addressbook.newComponent('card')">
-                <md-tooltip md-direction="left"><var:string label:value="Create a new address book card"/></md-tooltip>
-                <md-icon>person</md-icon>
-              </md-button>
-              <md-button var:aria-label="List" class="md-fab md-raised md-mini"
-                         ng-hide="addressbook.selectedFolder.isRemote"
-                         ng-click="addressbook.newComponent('list')">
-                <md-tooltip md-direction="left"><var:string label:value="Create a new list"/></md-tooltip>
-                <md-icon>group</md-icon>
-              </md-button>
-            </md-fab-actions>
-          </md-fab-speed-dial>
         </md-content>
       </div>
+
+      <md-fab-speed-dial
+          class="md-scale sg-fab-bottom-center"
+          ng-cloak="ng-cloak"
+          ng-class="{ 'sg-sidenav-close': leftIsClose, 'sg-center-close': centerIsClose }"
+          md-direction="up"
+          ng-show="addressbook.selectedFolder.isOwned || addressbook.selectedFolder.acls.objectCreator">
+        <md-fab-trigger>
+          <md-button class="md-fab md-accent" label:aria-label="New Contact">
+            <md-icon>add</md-icon>
+          </md-button>
+        </md-fab-trigger>
+        <md-fab-actions>
+          <md-button var:aria-label="Contact" class="md-fab md-raised md-mini"
+                     ng-click="addressbook.newComponent('card')">
+            <md-tooltip md-direction="left"><var:string label:value="Create a new address book card"/></md-tooltip>
+            <md-icon>person</md-icon>
+          </md-button>
+          <md-button var:aria-label="List" class="md-fab md-raised md-mini"
+                     ng-hide="addressbook.selectedFolder.isRemote"
+                     ng-click="addressbook.newComponent('list')">
+            <md-tooltip md-direction="left"><var:string label:value="Create a new list"/></md-tooltip>
+            <md-icon>group</md-icon>
+          </md-button>
+        </md-fab-actions>
+      </md-fab-speed-dial>
 
       <div id="detailView" class="view-detail"
            layout="column" layout-align="start center"
