@@ -64,20 +64,20 @@ $touch-zone: $touch-zone-width;
 
 /**
  *  Breakpoint:   0                    600px       960px     1024px        1280px
- *                ├───────────────────┼─────────┼─────────┼───────────┼─────────>
- *  Slice  :                xs           ·    sm    ·    md    ·     lg      .    xl
+ *                |----------------------|----------|----------|-------------|---------->
+ *  Slice  :      .         xs           ·    sm    ·    md    ·     lg      .    xl
  *                ·                      ·          ·          ·             ·
  *                ·                      ·          ·  at(md)  ·             ·
- *                ·                      ·          ├─────────┤             ·
+ *                ·                      ·          |----------|             ·
  *                ·                      ·          ·          ·             ·
  *                ·                      ·          · from(md) ·             ·
- *                ·                      ·          ├───────────────────────────────>
- *                ·                      ·                     ·             ·
- *                ·                      ·            to(md)   ·             ·
- *                ├─────────────────────────────────────────┤           ·
- *                                       ·                                   ·
- *                                       ·         between(sm, lg)           ·
- *                                       ├───────────────────────────────┤
+ *                ·                      ·          |----------------------------------->
+ *                ·                      ·          .          ·             ·
+ *                ·                      ·          . to(md)   ·             ·
+ *                |--------------------------------------------|             ·
+ *                .                      ·          .          .             ·
+ *                .                      ·         between(sm, lg)           ·
+ *                .                      |-----------------------------------|
  */
 
 $layout-breakpoint-xs:     600px !default;
